--- a/GetYourKnowlegde.MVC/GetYourKnowledge.MVC.csproj
+++ b/GetYourKnowlegde.MVC/GetYourKnowledge.MVC.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>GetYourKnowledge.MVC</RootNamespace>
   </PropertyGroup>
 
 </Project>
