Exception handling in non-development environment

--- a/GetYourKnowlegde.MVC/GetYourKnowledge.MVC.csproj
+++ b/GetYourKnowlegde.MVC/GetYourKnowledge.MVC.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>GetYourKnowledge.MVC</RootNamespace>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
 </Project>
