--- a/GetYourKnowledge.Tests/GetYourKnowledge.Tests.csproj
+++ b/GetYourKnowledge.Tests/GetYourKnowledge.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GetYourKnowlegde.MVC\GetYourKnowledge.MVC.csproj" />
+    <ProjectReference Include="..\GetYourKnowledge.MVC\GetYourKnowledge.MVC.csproj" />
   </ItemGroup>
 
 </Project>
